[tool.poetry]
name = "skaha"
version = "1.3.0"
description = "Python Client for Skaha Container Platform in CANFAR"
authors = ["Shiny Brar <charanjotbrar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
vos = "^3"
requests = "^2"
pydantic = "^1"
toml = "^0.10"
defusedxml = "^0.7"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
mypy = "*"
pytest = "*"
black = "*"
pytest-cov = "*"
mkdocs-material = "^9.1"
mkdocstrings-python = "^1.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"
